--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+<title>AluraFLix</title>
+</head>
+
 <body>
-    <reader> AluraFLix</reader>
+    <header>AluraFLix</header>
+<H1> STRANGER THINGS </H1>
+<P> #StrangersThings </P>
 </body>
+</html>
